- Added Input Validation for user routes - Added JWT support for authenticating logins
