# routes/track.js
@@ -1,6 +1,7 @@
 const express = require("express");
 const router = express();
 const tracksController = require("../controllers/tracks");
+const authenticateUser = require("../authenticate");
 
 router.use((req, res, next) => {
   res.setHeader("Access-Control-Allow-Methods", "GET,POST,PUT,DELETE,OPTIONS");
@@ -13,14 +14,10 @@ router.use((req, res, next) => {
   next();
 });
 
-router.get("/", (req, res) => {
-  res.json({message: "If you can see this you are in the TRACKS route."});
-});
-
-router.get("/user/:userId", tracksController.getTracks);
-router.get("/:id", tracksController.getTrack);
-router.post("/", tracksController.createTrack);
-router.put("/:id", tracksController.updateTrack);
-router.delete("/:id", tracksController.deleteTrack);
+router.get("/user", authenticateUser, tracksController.getTracks);
+router.get("/:trackId", authenticateUser, tracksController.getTrack);
+router.post("/", authenticateUser, tracksController.createTrack);
+router.put("/:trackId", authenticateUser, tracksController.updateTrack);
+router.delete("/:trackId", authenticateUser, tracksController.deleteTrack);
 
 module.exports = router;
