# routes/user.js
@@ -1,6 +1,8 @@
 const express = require("express");
 const router = express();
 const userController = require("../controllers/users");
+const { userValidationRules, validate } = require("../validator.js");
+const authenticateToken = require("../authenticate");
 
 router.use((req, res, next) => {
   res.setHeader("Access-Control-Allow-Methods", "GET,POST,PUT,DELETE,OPTIONS");
@@ -13,14 +15,10 @@ router.use((req, res, next) => {
   next();
 });
 
-router.get("/", (req, res) => {
-  res.json({message: "If you can see this you are in the USERS route."});
-});
-
-router.get("/:id", userController.getUser);
-router.post("/", userController.createUser);
-router.post("/login", userController.login);
-router.put("/:id", userController.updateUser);
-router.delete("/:id", userController.deleteUser);
+router.get("/", authenticateToken, userController.getUser);
+router.post("/", userValidationRules(), validate, userController.createUser);
+router.post("/login", userValidationRules(), validate, userController.login);
+router.put("/", authenticateToken, userController.updateUser);
+router.delete("/",authenticateToken, userController.deleteUser);
 
 module.exports = router;
